Исправлял ошибки